api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taiga-api
  labels:
    app.kubernetes.io/name: taiga-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app.kubernetes.io/name: taiga-api
