api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: taiga-api-public
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:343749756837:certificate/0863d01c-6412-4edd-a04f-d7fbd4f3a7ac
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app.kubernetes.io/name: taiga-api-public
spec:
  rules:
    - host: api.taigaprotocol.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: taiga-api
              servicePort: 8080
